def allJvmArgs = ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED', "--add-modules", "jdk.incubator.concurrent"]

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += ["--enable-preview", "--add-modules", "jdk.incubator.concurrent"]
}

tasks.withType(Test).configureEach {
  jvmArgs += allJvmArgs
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += allJvmArgs
}

java {
  sourceCompatibility = JavaVersion.VERSION_20
  toolchain {
    vendor = JvmVendorSpec.GRAAL_VM
    languageVersion = JavaLanguageVersion.of(20)
  }
}

test {
  systemProperty("junit.jupiter.extensions.autodetection.enabled", true)
}